# poutre2

./: .clang-tidy  .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  README_building.md  README_dependencies.md  README_docker.md  gcovr.cfg  pyproject.toml
.devcontainer/: Dockerfile
.github/: constants.env
.github/template/: README.md
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml  template-janitor.yml
benchmarks/: CMakeLists.txt
benchmarks/base/: CMakeLists.txt  containerview.cpp  main.hpp
benchmarks/geodesy/: CMakeLists.txt  geodesy.cpp  main.cpp  main.hpp
benchmarks/label/: CMakeLists.txt  label.cpp
benchmarks/low_level_morpho/: CMakeLists.txt  ero_dil.cpp
benchmarks/pixel_processing/: CMakeLists.txt  arith.cpp  compare.cpp  transpose.cpp
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  SimdDefaultFlags.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/poutre/base/: base.hpp  chronos.hpp  config.hpp  container.hpp  image_interface.hpp  iterator.hpp  json.hpp  poutreBase.hpp  poutreDenseIterator.hpp  poutreRegistrar.hpp  poutreStaticContainer.hpp  poutreTypes.hpp  registrar.hpp  trace.hpp  types.hpp  types_traits.hpp
include/poutre/base/details/data_structures/: array_view.hpp  image_t.hpp  pq.hpp
include/poutre/base/details/simd/: poutreSimdAlgorithm.hpp  simd_algorithm.hpp  simd_helpers.hpp
include/poutre/base/details/threading/: poutreThreading.hpp  threading_helpers.hpp
include/poutre/geodesy/: extrema.hpp  geodesy.hpp  leveling.hpp  mreconstruct.hpp
include/poutre/geodesy/details/: leveling_t.hpp  mreconstruct_t.hpp
include/poutre/io/: io.hpp  loader.hpp  writer.hpp
include/poutre/io/details/: hdf5.hpp  oiio.hpp
include/poutre/label/: label.hpp  label_binary.hpp  label_extrema.hpp  label_flat_zones.hpp
include/poutre/label/details/: label_t.hpp
include/poutre/low_level_morpho/: ero_dil.hpp  ero_dil_line.hpp  low_level_morpho.hpp
include/poutre/low_level_morpho/details/: ero_dil_compound_static_se_t.hpp  ero_dil_line_se_t.hpp  ero_dil_runtime_nl_se_t.hpp  ero_dil_static_se_t.hpp
include/poutre/pixel_processing/: arith.hpp  compare.hpp  copy_convert.hpp  pixel_processing.hpp
include/poutre/pixel_processing/details/: arith_op_t.hpp  binary_op_t.hpp  compare_op_t.hpp  copy_convert_t.hpp  quaternary_op_t.hpp  ternary_op_t.hpp  transpose_op_t.hpp  unary_op_t.hpp
include/poutre/structuring_element/: predefined_nl_se.hpp  se_chained.hpp  se_interface.hpp  se_types_and_tags.hpp  structuring_element.hpp
include/poutre/structuring_element/details/: neighbor_list_se_t.hpp  neighbor_list_static_se_t.hpp
include/poutre2/: sample_library.hpp
python/: CMakeLists.txt  main.cpp
python/base/: image_interface.cpp  types.cpp
python/geodesy/: geodesy.cpp
python/io/: io.cpp
python/label/: label.cpp
python/low_level_morpho/: ero_dil.cpp
python/pixel_processing/: arith.cpp  compare.cpp  copy_convert.cpp
python/structuring_element/: se_interface.cpp  se_types.cpp
src/: CMakeLists.txt
src/base/: CMakeLists.txt  chronos.cpp  image_interface.cpp  image_t.cpp  json.cpp  poutreJsonSerialization.cpp  poutreThreading.cpp  poutreType.cpp  threading_helpers.cpp  trace.cpp  types.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/geodesy/: CMakeLists.txt  extrema.cpp  leveling.cpp  mreconstruct.cpp
src/io/: CMakeLists.txt  hdf5.cpp  loader.cpp  oiio.cpp  writer.cpp
src/label/: CMakeLists.txt  label_binary.cpp  label_extrema.cpp  label_flat_zones.cpp
src/low_level_morpho/: CMakeLists.txt  ero_dil.cpp  ero_dil_compound_static.cpp  ero_dil_line.cpp  ero_dil_static.cpp
src/pixel_processing/: CMakeLists.txt  arith.cpp  compare.cpp  copy_convert.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
src/structuring_element/: CMakeLists.txt  predefined_nl_se.cpp  se_chained.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
test/base/: CMakeLists.txt  chronos.cpp  containerview.cpp  coordinate.cpp  image.cpp  image_iostring.cpp  iterate_view.cpp  json_serialize.cpp  pq.cpp  registrar.cpp  threading.cpp  types.cpp
test/geodesy/: CMakeLists.txt  extrema.cpp  leveling.cpp  mreconstruct.cpp
test/io/: CMakeLists.txt  hdf5.cpp  oiio.cpp
test/label/: CMakeLists.txt  label_binary.cpp  label_extrema.cpp  label_flat_zones.cpp
test/low_level_morpho/: CMakeLists.txt  ero_dil_line_se.cpp  ero_dil_runtime_se.cpp  ero_dil_static_se_t.cpp
test/pixel_processing/: CMakeLists.txt  arith.cpp  compare.cpp  copy_convert.cpp  transpose.cpp
test/structuring_element/: CMakeLists.txt  neighbor_list_se_t.cpp  neighbor_list_static_se_t.cpp
